# netix-simulator

./: .gitignore  Cargo.toml  Dockerfile.stage  LICENSE  NOTICE  README.md  build.rs
.github/workflows/: ci.yml  release-build.yml
demo/: README.md  config.yaml  demo_spec.json  gen_demo.py  republisher-config.toml
src/: main.rs
